# aur-rs

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs  main.rs
src/commands/: albumdisc.rs  artfix.rs  cdq.rs  copytags.rs  dupes.rs  flac2mp3.rs  get.rs  info.rs  inumber.rs  itag.rs  lint.rs  lintdir.rs  ls.rs  mod.rs  mp3dir.rs  name2num.rs  name2tag.rs  namecheck.rs  num2name.rs  reencode.rs  renumber.rs  retitle.rs  set.rs  sort.rs  split.rs  strip.rs  syncflac.rs  tag2name.rs  tags.rs  tagsub.rs  thes.rs  transcode.rs  verify.rs  wantflac.rs
src/common/: dir.rs  info.rs  mod.rs  rename.rs  spec_helper.rs  string.rs  tagger.rs
src/static/: words.toml
src/test_utils/: spec_helper.rs
src/utils/: config.rs  dir.rs  external.rs  helpers.rs  lame_wrapper.rs  layout.rs  macros.rs  metadata.rs  mod.rs  mp3_encoder.rs  rename.rs  renumber_file.rs  retitler.rs  spec_helper.rs  string.rs  tag_maker.rs  tag_validator.rs  tagger.rs  term.rs  titlecase.rs  types.rs  words.rs
tests/: albumdisc.rs  artfix.rs  cdq.rs  copytags.rs  dupes.rs  flac2mp3.rs  get.rs  info.rs  inumber.rs  itag.rs  lint.rs  lintdir.rs  ls.rs  name2num.rs  name2tag.rs  namecheck.rs  num2name.rs  reencode.rs  renumber.rs  retitle.rs  set.rs  sort.rs  strip.rs  syncflac.rs  tag2name.rs  tags.rs  tagsub.rs  thes.rs  transcode.rs  verify.rs  wantflac.rs
tests/common/: mod.rs
tests/outputs/commands/flac2mp3/: transcoded_info
tests/outputs/commands/info/: 01.test_artist.test_track.flac.txt
tests/outputs/commands/ls/: ls.txt
tests/outputs/commands/syncflac/: info-new-mp3  ls
tests/outputs/commands/tags/: 01.test_artist.test_track.flac.txt
tests/resources/commands/cdq/: 01.tester.hi-res.flac
tests/resources/commands/flac2mp3/: 01.tester.flac2mp3.flac  01.tester.test_transcode.flac
tests/resources/commands/itag/: 01.original_artist.original_title.flac  01.test_artist.untagged_song.flac
tests/resources/config/: test.toml
tests/resources/info/: bad_file.flac  test.flac
(+42 files in other folders)
