[package]
name = "aur"
version = "2.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
colored = "3.0"
id3 = "1.14"
image = "0.25"
indicatif = "0.17"
lazy_static = "1.5"
metaflac = "0.2"
mp3-metadata = "0.3"
rayon = "1.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.13"
terminal_size = "0.4"
toml = "0.8"
unidecode = "0.3"

[dev-dependencies]
assert_cli = "0.6"
assert_fs = "1.1"
assert_unordered = "0.3"
