[package]
name = "aur"
version = "2.6.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
camino = "1.1.9"
camino-tempfile = "1.1.1"
clap = { version = "4.3", features = ["derive"] }
colored = "3.0"
id3 = "1.14"
image = "0.25"
indicatif = "0.17"
metaflac = "0.2"
mp3-metadata = "0.3"
pathdiff = { version = "0.2", features = ["camino"] }
rayon = "1.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.13"
terminal_size = "0.4"
toml = "0.8"
unidecode = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
assert_unordered = "0.3"
predicates = "3"
