[package]
name = "aur"
version = "2.11.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = "1.25.0"
camino = "1.1.9"
clap = { version = "4.3", features = ["derive"] }
clap_complete = "4.6.3"
colored = "3.0"
id3 = "1.14"
imagesize = "0.14.0"
indicatif = "0.18"
jpeg-decoder = "0.3.2"
jpeg-encoder = "0.7.0"
metaflac = "0.2"
mp3-metadata = "0.4"
pathdiff = { version = "0.2", features = ["camino"] }
rayon = "1.10"
regex = "1"
resize = "0.8.9"
rgb = "0.8.53"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.13"
terminal_size = "0.4"
toml = "1.1.2"
unidecode = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
assert_unordered = "0.4"
camino-tempfile-ext = "0.3.3"
glob = "0.3.2"
predicates = "3"
pretty_assertions = "1.4.1"
snltest = { git = "https://github.com/snltd/snltest.git" }
